# Yuuki

./: .gitignore  IMPLEMENTATION_PLAN.md  Yuuki.sln  eslint.config.js  forge.config.js  package-lock.json  package.json  pubspec.yaml  spec.md  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js  开发守则.txt
.github/workflows/: main.yml
.kiro/specs/yuuki/: design.md  requirements.md  tasks.md
Yuuki/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Yuuki.csproj  app.manifest
Yuuki/Data/: YuukiDbContext.cs
Yuuki/Data/Repositories/: IRepository.cs  (+4 more)
Yuuki/Exceptions/: AuthenticationException.cs  DownloadException.cs  LaunchException.cs  YuukiException.cs
Yuuki/Models/: AuthResult.cs  DownloadProgress.cs  GameInstance.cs  InstalledMod.cs  LaunchConfig.cs  LaunchSettings.cs  LaunchState.cs  MinecraftVersion.cs  ModInfo.cs  ModLoaderType.cs  ModPlatform.cs  UserAccount.cs
Yuuki/Properties/: launchSettings.json
Yuuki/Services/: ServiceProvider.cs
lib/: main.dart
lib/src/: app.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
openspec/: README.md  project.md
rust/: Cargo.toml
rust/yuuki-core/: Cargo.toml  build.rs
rust/yuuki-core/src/: api.rs  auth.rs  config.rs  errors.rs  lib.rs  logging.rs
src/main/: ipc-handlers.ts  main.ts  preload.ts
src/renderer/: App.css  App.tsx  index.css  index.html  index.tsx
src/shared/: ipc-types.ts  ipc-wrapper.ts
src/test/: basic.test.ts
test/: widget_test.dart
windows/runner/: Runner.rc
(+64 files in other folders)
