[package]
name = "yuuki-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
flutter_rust_bridge = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.20"
rand = { version = "0.8", features = ["std"] }
uuid = { version = "1.5", features = ["v4"] }
directories = "5.0"

[build-dependencies]
flutter_rust_bridge_codegen = "2.2"
